styled the form

--- a/index.html
+++ b/index.html
@@ -7,8 +7,43 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
-Hello world
+
+    <div class="container">
+      <div class="wrapper">
+    <div class="left_div">
+        <div class="form_wrapper">
+            <h2>Stay Updated!</h2>
+            <p>join 60,000+ product manages receiver monthly updates on</p>
+            <div class="text_wrapper">
+                <span class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><g fill="none"><circle cx="10.5" cy="10.5" r="10.5" fill="#FF6155"/><path stroke="#FFF" stroke-width="2" d="M6 11.381 8.735 14 15 8"/></g></svg>
+                </span>
+                <p>Product discovery and building what matters</p>
+            </div>
+            <div class="text_wrapper">
+                <span class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><g fill="none"><circle cx="10.5" cy="10.5" r="10.5" fill="#FF6155"/><path stroke="#FFF" stroke-width="2" d="M6 11.381 8.735 14 15 8"/></g></svg>
+                </span>
+                <p>Measuring to ensure updates are a sucess</p>
+            </div>
+            <div class="text_wrapper">
+                <span class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><g fill="none"><circle cx="10.5" cy="10.5" r="10.5" fill="#FF6155"/><path stroke="#FFF" stroke-width="2" d="M6 11.381 8.735 14 15 8"/></g></svg>
+                </span>
+                <p>And much more</p>
+            </div>
+            <form>
+                <span class="email_label">Email Address </span>
+            <input type="email" name="" id="" required placeholder="email@company.com">
+            <button>Subscribe to monthly newsletter</button> 
+            </form>
+           
+        </div>
+    </div>
+    <div class="right_div"></div>
+</div>  
+    </div>
+
 
 <script src="js/script.js" async></script>
 </body>
