--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
            
         </div>
     </div>
-    <div class="right_div"></div>
+    <div class="right_div">
+        <img 
+            src="assets/images/illustration-sign-up-mobile.svg"
+            class="mobile"
+        />
+        <img src="/assets/images/illustration-sign-up-desktop.svg" alt="image"  class="desktop"/>
+    </div>
 </div>  
     </div>
 
